feat: add communities and memberships api endpoints
